# libcurl-ftp

./: CMakeLists.txt  README.md
include/: lc.h
src/: curlImpl.c  ftpImpl.c  main.c  stackImpl.c  threadImpl.c
src/datastructures/: singlyLinkedList.c
